--- a/css/style.css
+++ b/css/style.css
@@ -1,449 +1,536 @@
-@import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo&display=swap");
+
 :root {
-    --main-color: #D9A64A;
-    --bs-primary: #D9A64A;
-    --bs-primary-rgb: 217, 166, 74; 
-    --main-color-hover: #be913d;
-   /* #0E1A29 */
-  }
-  
-.bg-primary {
-    --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-primary-rgb),var(--bs-bg-opacity))!important;
+  --main-color: #d9a64a;
+  --bs-primary: #d9a64a;
+  --bs-primary-rgb: 217, 166, 74;
+  --main-color-hover: #be913d;
+  /* #0E1A29 */
 }
 
-*{
-    font-family: 'Cairo', sans-serif;
+.bg-primary {
+  --bs-bg-opacity: 1;
+  background-color: rgba(
+    var(--bs-primary-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
+}
 
+* {
+  font-family: "Cairo", sans-serif;
 }
 
 /* .carousel-inner{
     border-radius: 0% 0% 60% 60% / 0% 0% 17% 17%;
 } */
 .mask-slider {
-    -webkit-mask-image: url(../img/mask_slider.png);
-    mask-image: url(../img/mask_slider.png);
-    -webkit-mask-size: 100%;
-    mask-size: 100%;
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;    
+  -webkit-mask-image: url(../img/mask_slider.png);
+  mask-image: url(../img/mask_slider.png);
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
 }
+
 .mask-main {
-    -webkit-mask-image: url(../img/main-mask.svg);
+  /*    -webkit-mask-image: url(../img/main-mask.svg);
     mask-image: url(../img/main-mask.svg);
     -webkit-mask-size: 100%;
     mask-size: 100%;
     -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;    
-    height: 550px;
+    mask-repeat: no-repeat;    */
+
+  height: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.carousel-item img{
-    max-height: 650px;
+
+.carousel-item img {
+  max-height: 650px;
 }
-.overlay{
-  position: absolute; /* Sit on top of the page content */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+
+.overlay {
+  position: absolute;
+  /* Sit on top of the page content */
+  width: 100%;
+  /* Full width (cover the whole page) */
+  height: 100%;
+  /* Full height (cover the whole page) */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background: linear-gradient(0deg, #5e66705e 0%, #0e1a29 100%);
 
- /* Black background with opacity */
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  /* Black background with opacity */
+  z-index: 2;
+  /* Specify a stack order in case you're using a different order for other elements */
 }
-#navbar_top{
-position: absolute;
-z-index: 99;
-width: 100%;
+
+#navbar_top {
+  position: absolute;
+  z-index: 99;
+  width: 100%;
+}
+.navbar-toggler{
+  background: #fff;
 }
 
 .fixed-top {
-    position: fixed !important;
-    top: -40px;
-    left: 0;
-    right: 0;
-    z-index: 1030;
-    background-color: #0E1A29;
-    transform: translateY(40px);
-    transition: transform .3s ease-in-out;
+  position: fixed !important;
+  top: -40px;
+  left: 0;
+  right: 0;
+  z-index: 1030;
+  background-color: #0e1a29;
+  transform: translateY(40px);
+  transition: transform 0.3s ease-in-out;
 }
 
-.navbar-brand img{
-    width: 100%;
+.navbar-brand img {
+  width: 100%;
 }
+
 .navbar-nav .nav-link {
-    color: #fff;
-    
-}
-.navbar-nav .nav-link.active, .navbar-nav .show>.nav-link {
-    color: #fff;
-    background: var(--main-color);
-    border-radius: 8px;
+  color: #fff;
 }
 
-@media only screen and (max-width: 991px){
-    .navbar-collapse {
-        flex-basis: 100%;
-        flex-grow: 1;
-        align-items: center;
-        background: #0e1a29;
-        
-    }
-    .navbar-nav .nav-link {
-        padding: 10px;
-    }
+.navbar-nav .nav-link.active,
+.navbar-nav .show > .nav-link {
+  color: #fff;
+  background: var(--main-color);
+  border-radius: 8px;
+}
+
+@media only screen and (max-width: 991px) {
+  .navbar-collapse {
+    flex-basis: 100%;
+    flex-grow: 1;
+    align-items: center;
+    background: #0e1a29;
+    z-index: 9999;
   }
+
+  .navbar-nav .nav-link {
+    padding: 10px;
+  }
+}
+
+.page-title {
+  color: var(--main-color);
+}
+.page-title h3{
+  text-align: center;
+}
 
 .carousel-caption {
-    bottom: 50%;
-    z-index: 99;
-    color: #fff;
-    text-align: right;
+  bottom: 50%;
+  z-index: 99;
+  color: #fff;
+  text-align: right;
 }
 
-.carousel-caption h3{
-    color: var(--main-color);
-    font-weight: 700;
+.carousel-caption h3 {
+  color: var(--main-color);
+  font-weight: 700;
 }
 
-.btn-primary{
-    padding: 10px 35px;
-    font-size: 18px;
-    background: var(--main-color);
-    border-color: var(--main-color);
-    --bs-btn-font-weight: 600;
-    --bs-btn-color: var(--bs-white);
-    --bs-btn-bg: var(--bd-violet);
-    --bs-btn-border-color: var(--bd-violet);
-    --bs-btn-hover-color: var(--bs-white);
-    --bs-btn-hover-bg: var(--main-color-hover);
-    --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
-    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-    --bs-btn-active-color: var(--bs-btn-hover-color);
-    --bs-btn-active-bg: var(--main-color-hover);
-    --bs-btn-active-border-color: var(--main-color-hover);
-   
-}
-.btn-primary-sm{
-    padding: 8px 35px;
-    font-size: 15px;  
+.btn-primary {
+  padding: 10px 35px;
+  font-size: 18px;
+  background: var(--main-color);
+  border-color: var(--main-color);
+  --bs-btn-font-weight: 600;
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-violet);
+  --bs-btn-border-color: var(--bd-violet);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: var(--main-color-hover);
+  --bs-btn-hover-border-color: #{shade-color($bd-violet, 10%)};
+  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: var(--main-color-hover);
+  --bs-btn-active-border-color: var(--main-color-hover);
 }
 
-.about-us-container{
-    font-size: 18px;
-    line-height: normal;
+.btn-primary-sm {
+  padding: 8px 35px;
+  font-size: 15px;
 }
+
+.about-us-container {
+  font-size: 18px;
+  line-height: normal;
+}
+
 .about-us-container h3 {
-    color:var(--main-color);
-    font-weight: 600;
+  color: var(--main-color);
+  font-weight: 600;
 }
-.about-us-container-img{
-    width: 300px;
-    height: 300px;
+
+.about-us-container-img {
+  width: 300px;
+  height: 300px;
+  background-color: var(--main-color);
+  border-radius: 13px;
+}
+
+.about-us-container-img img {
+  width: 300px;
+  height: 300px;
+  border-radius: 13px;
+  border-bottom-left-radius: 40%;
+  border-top-right-radius: 40%;
+}
+
+@media only screen and (min-width: 992px) {
+  .about-us-container-img {
+    width: 352px;
+    height: 352px;
     background-color: var(--main-color);
     border-radius: 13px;
-}
-.about-us-container-img img{
-    width: 300px;
-    height: 300px;
-    border-radius: 13px;
-    border-bottom-left-radius: 40%;
-    border-top-right-radius:40% ;
-}
-@media only screen and (min-width: 992px){
-    .about-us-container-img{
-        width: 352px;
-        height: 352px;
-        background-color: var(--main-color);
-        border-radius: 13px;
-    }
-    .about-us-container-img img{
-        width: 352px;
-        height: 352px;
-        border-radius: 13px;
-        border-bottom-left-radius: 40%;
-        border-top-right-radius:40% ;
-    }
   }
 
+  .about-us-container-img img {
+    width: 352px;
+    height: 352px;
+    border-radius: 13px;
+    border-bottom-left-radius: 40%;
+    border-top-right-radius: 40%;
+  }
+}
 
 .subscriber-container {
-    background-color: #0E1A29;
-    color: #fff;
-    padding: 15px 5px;
-    margin-top: 60px;
+  background-color: #0e1a29;
+  color: #fff;
+  padding: 15px 5px;
+  margin-top: 60px;
 }
 
-.services{
-    margin-top: 30px;
+.services {
+  margin-top: 30px;
 }
 
- .line{
-    width: 50px;
-    height: 3px;
-    background-color: #000;
-}
- .box{
-    width: 15px;
-    height: 15px;
-    transform: rotate(45deg);
-    background-color: #000000;
+.line {
+  width: 50px;
+  height: 3px;
+  background-color: #000;
 }
 
-.services .card-service{
-   /*  border: 1px solid #000; */
-    background-color: #fafafa;
-    border-radius: 14px;
-    border-bottom-left-radius:90px;
-    border-top-right-radius:90px ;
-    overflow: hidden;
-    overflow-wrap: break-word;
-    width: 245px !important;
-    margin: auto;
-   
+.box {
+  width: 15px;
+  height: 15px;
+  transform: rotate(45deg);
+  background-color: #000000;
 }
-.services .card-service .card-body{
-   /*  border: 1px solid #000; */
-  height:200px;
- 
-}
-.services .card-service .card-body h5{
-    font-size: 16px;
-    font-weight: bold;
-}
-.services .card-service .card-body p{
-    font-size: 15px;
 
+.services .card-service {
+  /*  border: 1px solid #000; */
+  background-color: #fafafa;
+  border-radius: 14px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  width: 245px !important;
+  margin: auto;
+}
+
+.services .card-service .card-body {
+  /*  border: 1px solid #000; */
+  height: 200px;
+}
+
+.services .card-service .card-body h5 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.services .card-service .card-body p {
+  font-size: 15px;
 }
 
 /* work team */
-.work-team{
-    background: #f1f1f1;
-    margin-top: 40px;
-    padding: 30px 0;
+.work-team {
+  background: #f1f1f1;
+  margin-top: 40px;
+  padding: 30px 0;
 }
 
-.container-card{
-    height: 360px;
-    display: flex;
-    align-items: flex-end;
+.container-card {
+  height: 360px;
+  display: flex;
+  align-items: flex-end;
 }
 
-.work-team-card
-{
-    border: none;
-    text-align: center;
-    height: 198px;
-    width: 231px;
-    border-radius: 17px;
-}
-.work-team-card .card-img
-{
-    position: relative;
+.work-team-card {
+  border: none;
+  text-align: center;
+  height: 198px;
+  width: 231px;
+  border-radius: 17px;
 }
 
-.work-team-card img
-{
-    width: 127px;
-    height: 127px;
-    position: absolute;
-    top: -95px;
-    right: 25%;
-    left: 0;
-    border: 4px solid var(--main-color);
-    border-radius: 50%;
-    padding: 3px;
+.work-team-card .card-img {
+  position: relative;
 }
 
-.work-team-card .card-footer{
-    background: var(--main-color);
-    color: #fff;
-    border-bottom-left-radius: 17px;
-    border-bottom-right-radius: 17px;
+.work-team-card img {
+  width: 127px;
+  height: 127px;
+  position: absolute;
+  top: -95px;
+  right: 25%;
+  left: 0;
+  border: 4px solid var(--main-color);
+  border-radius: 50%;
+  padding: 3px;
 }
 
-.work-team-card .card-footer .social-container{
-   width: 60%;
-   margin: auto;
-   justify-content: space-between;
-}
-.work-team-card .card-footer a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
+.work-team-card .card-footer {
+  background: var(--main-color);
+  color: #fff;
+  border-bottom-left-radius: 17px;
+  border-bottom-right-radius: 17px;
 }
 
-.work-team-card .card-body{
-    margin-top: 25px;
-}
-.work-team-card .card-body .name-staff{
-    font-size: 22px;
-    font-weight: bold;
-    color: var(--main-color);
-}
-.work-team-card .card-body .job-staff{
-    font-size: 16px;
-    color: #0e1a29;
+.work-team-card .card-footer .social-container {
+  width: 60%;
+  margin: auto;
+  justify-content: space-between;
 }
 
-.work-team .container-dots{
-    list-style: none;
-    margin: auto;
-    width: 250px;
-    justify-content: center; 
-    align-items: center;
+.work-team-card .card-footer a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
 }
-.work-team .container-dots .dot-item{
-   width: 5px;
-   height: 58px;
-   border-radius: 8px;
-   background: #0e1a29;
-   display: block;
-   margin-right:16.5px ;
-   
+
+.work-team-card .card-body {
+  margin-top: 25px;
 }
-.work-team .container-dots .slick-active .dot-item{
-   height: 82px;
-   background: var(--main-color);
-   box-shadow: #daa759 0 3px 6px;
+
+.work-team-card .card-body .name-staff {
+  font-size: 22px;
+  font-weight: bold;
+  color: var(--main-color);
 }
+
+.work-team-card .card-body .job-staff {
+  font-size: 16px;
+  color: #0e1a29;
+}
+
+.work-team .container-dots {
+  list-style: none;
+  margin: auto;
+  width: 250px;
+  justify-content: center;
+  align-items: center;
+}
+
+.work-team .container-dots .dot-item {
+  width: 5px;
+  height: 58px;
+  border-radius: 8px;
+  background: #0e1a29;
+  display: block;
+  margin-right: 16.5px;
+}
+
+.work-team .container-dots .slick-active .dot-item {
+  height: 82px;
+  background: var(--main-color);
+  box-shadow: #daa759 0 3px 6px;
+}
+
 /* active slider */
-.work-team .slick-center .container-card{
-    height: 420px;
-    display: flex;
-    align-items: flex-end;
-}
-.work-team .slick-center .work-team-card{
-    /* margin-top: 20px; */
-    height: 257px;
-    width: 286px;
-}
-.work-team .slick-center .work-team-card img
-{
-    width: 157px;
-    height: 157px;
-    position: absolute;
-    top: -121px;
-    right: 25%;
-    left: 0;
-    border: 4px solid #0E1A29;
-    border-radius: 50%;
-    padding: 3px;
-}
-.work-team .slick-center .work-team-card .card-body{
-display: flex;
-align-items: center;
-flex-direction: column;
-justify-content: center;
-}
-.work-team .slick-center .work-team-card .card-body .name-staff{
-    font-size: 27px;
-    font-weight: bold;
-    color: #0E1A29;
-}
-.work-team .slick-center  .work-team-card .card-body .job-staff{
-    font-size: 18px;
-    color: #0e1a29;
-}
-.work-team .slick-center .work-team-card .card-footer{
-    margin-top: 25px;
-    background-color: #0E1A29;
+.work-team .slick-center .container-card.container-team-card {
+  height: 420px;
+  display: flex;
+  align-items: flex-end;
 }
 
-.work-team .container-btn-controller{
-    position: relative;
+.work-team .slick-center .work-team-card {
+  /* margin-top: 20px; */
+  height: 257px;
+  width: 286px;
 }
 
-.work-team .slick-arrow{
-    position: absolute;
-    bottom: 150px;
-    background: #0E1A29;
-    color: #fff;
-    padding: 5px 3px;
-   
-}
-.work-team .slick-prev{
-    right: 20px;
-}
-.work-team .slick-next{
-    left: 20px;
+.work-team .slick-center .work-team-card img {
+  width: 157px;
+  height: 157px;
+  position: absolute;
+  top: -121px;
+  right: 25%;
+  left: 0;
+  border: 4px solid #0e1a29;
+  border-radius: 50%;
+  padding: 3px;
 }
 
+.work-team .slick-center .work-team-card .card-body {
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  justify-content: center;
+}
+
+.work-team .slick-center .work-team-card .card-body .name-staff {
+  font-size: 27px;
+  font-weight: bold;
+  color: #0e1a29;
+}
+
+.work-team .slick-center .work-team-card .card-body .job-staff {
+  font-size: 18px;
+  color: #0e1a29;
+}
+
+.work-team .slick-center .work-team-card .card-footer {
+  margin-top: 25px;
+  background-color: #0e1a29;
+}
+
+.work-team .container-btn-controller {
+  position: relative;
+}
+
+.work-team .slick-arrow {
+  position: absolute;
+  top: 150px;
+  background: #0e1a29;
+  color: #fff;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 3px;
+  z-index: 9;
+  font-size: 16px;
+}
+
+.work-team .slick-prev {
+  right: 20px;
+}
+
+.work-team .slick-next {
+  left: 20px;
+}
+
+@media only screen and (max-width: 772px) {
+    .work-team .container-btn-controller {
+        position: relative;
+        /* top: 60px; */
+      }
+    .work-team .slick-arrow {
+        position: absolute;
+        top: 0px;
+        background: #0e1a29;
+        color: #fff;
+        padding: 2px 1px;
+        font-size: 13px;
+      }
+      
+      .work-team .slick-prev {
+        right: 26px;
+      }
+      
+      .work-team .slick-next {
+        left: 26px;
+      }
+  }
 /* footer */
-footer{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.692) , rgba(0, 0, 0, 0.712)), url('../img/footer_img.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #fff;
-}
-footer .row{
-    margin: 0;
-}
-footer .right-side{
-    background: rgba(13, 26, 43, 0.849);
-    padding: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
-}
-footer .right-side .footer-logo{
-    text-align: center;
-    width: 100%;
-}
-footer .right-side .footer-logo img{
-    width: 100%;
-}
-.social-link{
-    width: 60%;
-    margin: 20px auto;
-   display: flex;
-   justify-content: space-around;
+footer {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.692), rgba(0, 0, 0, 0.712)),
+    url("../img/footer_img.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #fff;
 }
 
-.social-link a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
+footer .row {
+  margin: 0;
 }
 
-.social-link a:hover{
-    color: var(--main-color);
+footer .right-side {
+  background: rgba(13, 26, 43, 0.849);
+  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-footer .left-side{
-    padding: 60px;
+footer .right-side .footer-logo {
+  text-align: center;
+  width: 100%;
 }
 
-
-.address-details{
-    margin: 15px auto;
+footer .right-side .footer-logo img {
+  width: 100%;
 }
 
-footer .left-side .address-details .title{
-    font-size: 13px;
-
-    color: var(--main-color);
+.social-link {
+  width: 60%;
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-around;
 }
 
-footer .left-side .address-details .address-value{
-    font-size: 13px;
-    font-family: 'Montserrat';
-}
-footer .left-side form{
-   margin-top: 30px;
+.social-link a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
 }
 
-footer .input-group .form-control , textarea{
-    border: 2px solid #0E1A29;
-    border-radius: 0; 
+.social-link a:hover {
+  color: var(--main-color);
 }
+
+footer .left-side {
+  padding: 60px;
+}
+
+.address-details {
+  margin: 15px auto;
+}
+
+footer .left-side .address-details .title {
+  font-size: 13px;
+
+  color: var(--main-color);
+}
+
+footer .left-side .address-details .address-value {
+  font-size: 13px;
+  font-family: "Montserrat";
+}
+
+footer .left-side form {
+  margin-top: 30px;
+}
+
+footer .input-group .form-control,
+textarea {
+  border: 2px solid #0e1a29;
+  border-radius: 0;
+}
+
 .input-group-text {
-    color: #ebebeb;
-    background-color: var(--main-color);
-    border: 3px solid #0E1A29;
-    border-radius: 0; 
+  color: #ebebeb;
+  background-color: var(--main-color);
+  border: 3px solid #0e1a29;
+  border-radius: 0;
 }
 
+
+
+.card-details {
+  margin-top: 60px;
+  margin-bottom: 40px;
+  box-shadow: 1px 2px 12px 1px #9b9696;
+  border: 1px solid #a3a2a2;
+}
+
+.card-details .card-title {
+  color: var(--main-color);
+}
