--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@
   position: relative;
 }
 
-.work-team-card img {
+.work-team-card img.main-image {
   width: 127px;
   height: 127px;
   position: absolute;
@@ -371,7 +371,7 @@
   width: 286px;
 }
 
-.work-team .slick-center .work-team-card img {
+.work-team .slick-center .work-team-card img.main-image {
   width: 157px;
   height: 157px;
   position: absolute;
